tests/error/inout_errors/conflict.err
Error: Type mismatch (at $FILE:19:11)
   | 
17 | @guppy(module)
18 | def test() -> Callable[[qubit @owned], qubit]:
19 |     return foo
   |            ^^^ Expected return value of type `qubit @owned -> qubit`, got
   |                `qubit -> qubit`

Guppy compilation failed due to 1 previous error
